<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:src="@drawable/aicte"
            android:id="@+id/aicteimg"/>


        <TextView
            android:id="@+id/aictetext"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/all_india_council_for_technical_education"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:textAlignment="center"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/lavender"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:cardElevation="20dp"
        app:cardCornerRadius="20dp"
        android:id="@+id/cardview">

        <com.denzcoskun.imageslider.ImageSlider
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/slider"
            app:iss_period="1000"
            app:iss_auto_cycle="true"
            app:iss_delay="1000"
            app:iss_corner_radius="20"
            app:iss_title_background="@drawable/gradient"/>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardview"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/quick"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quick_links"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="#4471B1"
            android:layout_marginBottom="10dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@drawable/line"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/clickableText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aicte_internship_portal"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:clickable="true"
            android:onClick="onTextClick"
            android:focusable="true"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@drawable/line"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/clickableText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/atal_academy"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:clickable="true"
            android:onClick="onTextClick"
            android:focusable="true"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@drawable/line"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/clickableText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aicte_karma"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:clickable="true"
            android:onClick="onTextClick"
            android:focusable="true"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@drawable/line"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/quick"
        android:id="@+id/welcome"
        android:paddingHorizontal="20dp"
        android:paddingVertical="50dp"
        android:orientation="vertical"
        android:background="@drawable/textback">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/welcometext"
            android:text="@string/welcome_to_aicte"
            android:textSize="30dp"
            android:textStyle="bold"
            android:textColor="@color/text_shadow_white"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="30dp"
            android:text="@string/all_india_council_for_technical_education_aicte_was_set_up_in_november_1945_as_a_national_level_apex_advisory_body_to_conduct_a_survey_on_the_facilities_available_for_technical_education_and_to_promote_development_in_the_country_in_a_coordinated_and_integrated_manner"
            android:textSize="20dp"
            android:textColor="@color/text_shadow_white"
            android:textAlignment="center"/>


    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome"
        android:id="@+id/shape"
        android:src="@drawable/untitled"
        android:scaleX="1.5"
        android:scaleY="1.5"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/shape"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:background="@color/back">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Terms of Use  |"
            android:padding="5dp"
            android:id="@+id/use"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/privacy"
            android:layout_toEndOf="@+id/use"
            android:padding="5dp"
            android:text="Privacy policy  |"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/info"
            android:layout_toEndOf="@+id/privacy"
            android:padding="5dp"
            android:text="Right to Information  |"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/report"
            android:layout_below="@+id/info"
            android:padding="5dp"
            android:text="Reports  |"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/contact"
            android:layout_below="@+id/privacy"
            android:layout_toEndOf="@+id/report"
            android:padding="5dp"
            android:text="Contact Us"/>


    </RelativeLayout>


</RelativeLayout>
</ScrollView>